--- a/projects/ngx/lowcode/wpx-schema/wpx-schema-act/wpx-schema-act.component.html
+++ b/projects/ngx/lowcode/wpx-schema/wpx-schema-act/wpx-schema-act.component.html
@@ -1,5 +1,5 @@
 <ng-template #title>
-  <ng-container *ngIf="!editable; else isEditable"> 创建一个新的内容类型 </ng-container>
+  <ng-container *ngIf="!editable; else isEditable"> 创建新的内容类型 </ng-container>
   <ng-template #isEditable> 更新内容类型 </ng-template>
 </ng-template>
 
