--- a/projects/ngx/lowcode/wpx-schema/wpx-schema.component.html
+++ b/projects/ngx/lowcode/wpx-schema/wpx-schema.component.html
@@ -18,16 +18,16 @@
           <input type="text" nz-input placeholder="搜索" [(ngModel)]="name" />
         </nz-input-group>
         <nz-button-group *nzSpaceItem>
-          <button nz-button nz-tooltip="全部收起" (click)="layout.setExpanded(tree.getTreeNodes(), false)">
+          <button nz-button nz-tooltip="全部收起" (click)="layout.setExpanded(schemaTree.getTreeNodes(), false)">
             <i nz-icon nzType="node-collapse"></i>
           </button>
-          <button nz-button nz-tooltip="全部展开" (click)="layout.setExpanded(tree.getTreeNodes(), true)">
+          <button nz-button nz-tooltip="全部展开" (click)="layout.setExpanded(schemaTree.getTreeNodes(), true)">
             <i nz-icon nzType="node-expand"></i>
           </button>
         </nz-button-group>
       </nz-space>
       <nz-tree
-        #tree
+        #schemaTree
         nzBlockNode
         nzShowLine
         nzShowIcon
@@ -39,13 +39,24 @@
         (nzContextMenu)="actions($event, treeActions)"
       >
         <ng-template #multiExpandedIconTpl let-node let-origin="origin">
-          <i
-            *ngIf="!origin.isLeaf"
-            nz-icon
-            [nzType]="node.isExpanded ? 'folder-open' : 'folder'"
-            class="ant-tree-switcher-line-icon"
-          ></i>
-          <i *ngIf="origin.isLeaf" nz-icon nzType="file" class="ant-tree-switcher-line-icon"></i>
+          <ng-container *ngIf="!origin.isLeaf; else isLeaf">
+            <i nz-icon [nzType]="node.isExpanded ? 'folder-open' : 'folder'" class="ant-tree-switcher-line-icon"></i>
+          </ng-container>
+          <ng-template #isLeaf>
+            <ng-container [ngSwitch]="node.key">
+              <ng-container *ngSwitchCase="'home'">
+                <i nz-icon nzType="database" class="ant-tree-switcher-line-icon"></i>
+              </ng-container>
+              <ng-container *ngSwitchDefault>
+                <ng-container *ngIf="!origin.data?.system; else isSystem">
+                  <i nz-icon nzType="file" class="ant-tree-switcher-line-icon"></i>
+                </ng-container>
+                <ng-template #isSystem>
+                  <i nz-icon nzType="file-protect" class="ant-tree-switcher-line-icon"></i>
+                </ng-template>
+              </ng-container>
+            </ng-container>
+          </ng-template>
         </ng-template>
         <nz-dropdown-menu #treeActions="nzDropdownMenu">
           <ul nz-menu>
@@ -64,115 +75,139 @@
       </nz-tree>
     </nz-col>
     <nz-col nzFlex="auto">
-      <ng-container *ngIf="!fieldAct.data; else manager">
-        <nz-result>
-          <div nz-result-content>
-            <h5 nz-typography style="padding-bottom: 1em">[模式管理] 为项目提供快速统一的内容生成功能：</h5>
-            <p nz-paragraph>
-              <i nz-icon nzType="bulb" nzTheme="twotone"></i>
-              主要包含三类：集合类型、单一类型、自定义类型，基本概念可参考指南...
-            </p>
-            <p nz-paragraph>
-              <i nz-icon nzType="bulb" nzTheme="twotone"></i>
-              在树视图中使用 🖱 选中节点获取详情，也可以 <code>右键</code> 获取更多操作
-            </p>
-            <p nz-paragraph>
-              <i nz-icon nzType="bulb" nzTheme="twotone"></i>
-              包含 <code><i nz-icon nzType="lock"></i></code> 属于系统组件不可修改删除
-            </p>
-            <p nz-paragraph>
-              <i nz-icon nzType="bulb" nzTheme="twotone"></i>
-              执行操作 <code><i nz-icon nzType="cloud-upload"></i></code> 当前开发模式配置将发布至生成环境
-            </p>
-          </div>
-        </nz-result>
-      </ng-container>
-      <ng-template #manager>
-        <ng-container *ngIf="fieldAct.data?.kind !== 'manual'; else manual">
-          <ng-template #fieldsTitle>
-            <button nzBlock nz-button nzType="link" (click)="fieldAct.open()">
-              <i nz-icon nzType="plus"></i> 创建一个字段到该内容类型
-            </button>
-          </ng-template>
-          <nz-table
-            #fieldsTable
-            nzSize="default"
-            [nzFooter]="fieldsTitle"
-            [nzData]="fieldAct.fields"
-            [nzFrontPagination]="false"
-            [nzShowPagination]="false"
-          >
-            <thead>
-              <tr>
-                <th nzWidth="65px"> </th>
-                <th nzWidth="200px"><b>字段名称</b></th>
-                <th nzWidth="200px"><b>显示名称</b></th>
-                <th><b>描述</b></th>
-                <th nzWidth="120px" nzRight="0px"><b>操作</b></th>
-              </tr>
-            </thead>
-            <tbody cdkDropList (cdkDropListDropped)="fieldAct.sort($event)">
-              <tr *ngFor="let data of fieldsTable.data" cdkDrag>
-                <td>
-                  <button nz-button nzType="dashed" nzShape="circle" cdkDragHandle>
-                    <i nz-icon nzType="drag"></i>
-                  </button>
-                </td>
-                <td>
-                  <nz-tag nzColor="blue">{{ fieldAct.type | wpxMap: data.type }}</nz-tag>
-                  {{ data.key }}
-                </td>
-                <td>{{ data.label }}</td>
-                <td>
-                  <ng-container *ngIf="data.unique">
-                    <nz-tag>唯一的</nz-tag>
-                  </ng-container>
-                  <ng-container *ngIf="data.required">
-                    <nz-tag>必须的</nz-tag>
-                  </ng-container>
-                  <ng-container *ngIf="data.private">
-                    <nz-tag>私属字段</nz-tag>
-                  </ng-container>
-                  <ng-container *ngIf="!!data.option?.mode">
-                    <nz-tag>
-                      <ng-container [ngSwitch]="data.option?.mode">
-                        <span *ngSwitchCase="'manual'"> 自定义引用</span>
-                        <span *ngSwitchCase="'one'"> 单引用</span>
-                        <span *ngSwitchCase="'many'"> 多引用</span>
-                      </ng-container>
-                      <span>=>{{ data.option?.target }}</span>
-                      <span *ngIf="data.option?.to">.{{ data.option?.to }} </span>
-                    </nz-tag>
-                  </ng-container>
-                  <ng-container *ngIf="data.default">
-                    <nz-tag>默认值:{{ data.default }}</nz-tag>
-                  </ng-container>
-                </td>
-                <td>
-                  <ng-container *ngIf="!data.system; else isSystem">
+      <ng-container *ngIf="!fieldAct.data; else content">
+        <nz-tabset nzType="card">
+          <nz-tab nzTitle="自定义组件">
+            <nz-table #manualTable [nzData]="manuals" [nzFrontPagination]="false" [nzShowPagination]="false">
+              <thead>
+                <tr>
+                  <th nzWidth="65px"> </th>
+                  <th nzWidth="200px"><b>集合命名</b></th>
+                  <th nzWidth="200px"><b>显示名称</b></th>
+                  <th><b>描述</b></th>
+                  <th nzWidth="120px" nzRight="0px"><b>操作</b></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let data of manualTable.data">
+                  <td>
+                    <ng-container *ngIf="!!data.system">
+                      <nz-tag nzColor="blue">SYS</nz-tag>
+                    </ng-container>
+                  </td>
+                  <td>{{ data.key }}</td>
+                  <td>{{ data.label }}</td>
+                  <td> - </td>
+                  <td>
                     <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="actions">
                       <i nz-icon nzType="ellipsis"></i>
                     </button>
                     <nz-dropdown-menu #actions="nzDropdownMenu">
                       <ul nz-menu>
-                        <li nz-menu-item (click)="fieldAct.open(data)"> <i nz-icon nzType="edit"></i>&nbsp;编辑 </li>
-                        <li nz-menu-item (click)="fieldAct.delete(data)">
+                        <li nz-menu-item> <i nz-icon nzType="setting"></i>&nbsp;设置 </li>
+                        <li nz-menu-item [nzDisabled]="!!data.system" (click)="schemaAct.delete(data)">
                           <i nz-icon nzType="delete"></i>&nbsp;删除
                         </li>
                       </ul>
                     </nz-dropdown-menu>
-                  </ng-container>
-                  <ng-template #isSystem>
-                    <button nz-button nzType="text" disabled>
-                      <i nz-icon nzType="lock"></i>
+                  </td>
+                </tr>
+              </tbody>
+            </nz-table>
+          </nz-tab>
+          <nz-tab nzTitle="数据库集合" nzDisabled> </nz-tab>
+        </nz-tabset>
+      </ng-container>
+      <ng-template #content>
+        <nz-tabset nzType="card" [nzTabBarExtraContent]="contentTabExtra">
+          <ng-template #contentTabExtra>
+            <button nz-button nzType="text"><i nz-icon nzType="ellipsis"></i></button>
+          </ng-template>
+          <nz-tab nzTitle="内容类型">
+            <nz-table
+              #contentTable
+              [nzData]="fieldAct.fields"
+              [nzFrontPagination]="false"
+              [nzShowPagination]="false"
+              [nzFooter]="fieldsFooter"
+            >
+              <thead>
+                <tr>
+                  <th nzWidth="65px"> </th>
+                  <th nzWidth="200px"><b>字段名称</b></th>
+                  <th nzWidth="200px"><b>显示名称</b></th>
+                  <th><b>描述</b></th>
+                  <th nzWidth="120px" nzRight="0px"><b>操作</b></th>
+                </tr>
+              </thead>
+              <tbody cdkDropList (cdkDropListDropped)="fieldAct.sort($event)">
+                <tr *ngFor="let data of contentTable.data" cdkDrag>
+                  <td>
+                    <button nz-button nzType="dashed" nzShape="circle" cdkDragHandle>
+                      <i nz-icon nzType="drag"></i>
                     </button>
-                  </ng-template>
-                </td>
-              </tr>
-            </tbody>
-          </nz-table>
-        </ng-container>
-        <ng-template #manual> </ng-template>
+                  </td>
+                  <td>
+                    <nz-tag nzColor="blue">{{ fieldAct.type | wpxMap: data.type }}</nz-tag>
+                    {{ data.key }}
+                  </td>
+                  <td>{{ data.label }}</td>
+                  <td>
+                    <ng-container *ngIf="data.unique">
+                      <nz-tag>唯一的</nz-tag>
+                    </ng-container>
+                    <ng-container *ngIf="data.required">
+                      <nz-tag>必须的</nz-tag>
+                    </ng-container>
+                    <ng-container *ngIf="data.private">
+                      <nz-tag>私属字段</nz-tag>
+                    </ng-container>
+                    <ng-container *ngIf="!!data.option?.mode">
+                      <nz-tag>
+                        <ng-container [ngSwitch]="data.option?.mode">
+                          <span *ngSwitchCase="'manual'"> 自定义引用</span>
+                          <span *ngSwitchCase="'one'"> 单引用</span>
+                          <span *ngSwitchCase="'many'"> 多引用</span>
+                        </ng-container>
+                        <span>=>{{ data.option?.target }}</span>
+                        <span *ngIf="data.option?.to">.{{ data.option?.to }} </span>
+                      </nz-tag>
+                    </ng-container>
+                    <ng-container *ngIf="data.default">
+                      <nz-tag>默认值:{{ data.default }}</nz-tag>
+                    </ng-container>
+                  </td>
+                  <td>
+                    <ng-container *ngIf="!data.system; else isSystem">
+                      <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="actions">
+                        <i nz-icon nzType="ellipsis"></i>
+                      </button>
+                      <nz-dropdown-menu #actions="nzDropdownMenu">
+                        <ul nz-menu>
+                          <li nz-menu-item (click)="fieldAct.open(data)"> <i nz-icon nzType="edit"></i>&nbsp;编辑 </li>
+                          <li nz-menu-item (click)="fieldAct.delete(data)">
+                            <i nz-icon nzType="delete"></i>&nbsp;删除
+                          </li>
+                        </ul>
+                      </nz-dropdown-menu>
+                    </ng-container>
+                    <ng-template #isSystem>
+                      <button nz-button nzType="text" disabled>
+                        <i nz-icon nzType="lock"></i>
+                      </button>
+                    </ng-template>
+                  </td>
+                </tr>
+              </tbody>
+              <ng-template #fieldsFooter>
+                <button nzBlock nz-button nzType="link" (click)="fieldAct.open()">
+                  <i nz-icon nzType="plus"></i> 创建字段到该内容类型
+                </button>
+              </ng-template>
+            </nz-table>
+          </nz-tab>
+          <nz-tab nzTitle="索引" nzDisabled> </nz-tab>
+        </nz-tabset>
       </ng-template>
     </nz-col>
   </nz-row>
