--- a/projects/ngx/lowcode/wpx-page/wpx-page.component.html
+++ b/projects/ngx/lowcode/wpx-page/wpx-page.component.html
@@ -40,7 +40,7 @@
         <nz-tabset nzSize="large" [(nzSelectedIndex)]="tabs">
           <nz-tab nzTitle="基础设置"></nz-tab>
           <nz-tab nzTitle="路由设置"></nz-tab>
-          <nz-tab nzTitle="模板设置" [nzDisabled]="!routerTemplate.value || routerTemplate.value === 'manual'"></nz-tab>
+          <nz-tab nzTitle="验证器" [nzDisabled]="routerTemplate?.value !== 'form'"></nz-tab>
         </nz-tabset>
       </nz-card-tab>
 
@@ -51,14 +51,6 @@
               <nz-form-label nzRequired>页面名称</nz-form-label>
               <nz-form-control style="width: 420px">
                 <input nz-input formControlName="name" placeholder="请输入页面名称，例如订单管理" />
-              </nz-form-control>
-            </nz-form-item>
-            <nz-form-item>
-              <nz-form-label nzRequired>父节点</nz-form-label>
-              <nz-form-control style="width: 420px">
-                <nz-select formControlName="parent" nzPlaceHolder="选择页面的父节点，例如最高级">
-                  <nz-option nzLabel="最高级" nzValue="root"></nz-option>
-                </nz-select>
               </nz-form-control>
             </nz-form-item>
             <nz-form-item>
@@ -90,8 +82,8 @@
               </nz-form-control>
             </nz-form-item>
           </ng-container>
-          <ng-container formGroupName="router">
-            <ng-container *ngSwitchCase="1">
+          <ng-container *ngSwitchCase="1">
+            <ng-container formGroupName="router">
               <nz-form-item>
                 <nz-form-label nzRequired>模板类型</nz-form-label>
                 <nz-form-control style="width: 420px">
@@ -102,83 +94,109 @@
                   </nz-select>
                 </nz-form-control>
               </nz-form-item>
-              <nz-form-item>
-                <nz-form-label nzRequired>关联内容类型</nz-form-label>
-                <nz-form-control style="width: 420px">
-                  <nz-input-group nzCompact>
-                    <nz-select
-                      style="width: 90%"
-                      formControlName="schema"
-                      nzPlaceHolder="请选择内容类型"
-                      (ngModelChange)="setRouterFields($event)"
+              <ng-container *ngIf="routerTemplate?.value !== 'manual'">
+                <nz-form-item>
+                  <nz-form-label nzRequired>关联内容类型</nz-form-label>
+                  <nz-form-control style="width: 420px">
+                    <nz-input-group nzCompact>
+                      <nz-select
+                        style="width: 90%"
+                        formControlName="schema"
+                        nzPlaceHolder="请选择内容类型"
+                        (ngModelChange)="schemaChanged($event)"
+                      >
+                        <ng-container *ngFor="let x of schemas">
+                          <nz-option [nzLabel]="x.label + ' [ ' + x.key + ' ]'" [nzValue]="x.key"></nz-option>
+                        </ng-container>
+                      </nz-select>
+                      <button nz-button style="width: 10%" type="button" (click)="getSchemas()">
+                        <i nz-icon nzType="sync"></i>
+                      </button>
+                    </nz-input-group>
+                  </nz-form-control>
+                </nz-form-item>
+                <nz-form-item>
+                  <nz-form-label nzRequired>是否预加载</nz-form-label>
+                  <nz-form-control style="width: 420px" nzExtra="需要优先获取数据，例如更新类表单">
+                    <nz-switch formControlName="fetch"></nz-switch>
+                  </nz-form-control>
+                </nz-form-item>
+                <nz-form-item>
+                  <nz-form-label nzRequired>字段设置</nz-form-label>
+                  <nz-form-control formArrayName="fields">
+                    <nz-table
+                      #fieldsTable
+                      nzFooter="* 请选择页面需要显示的字段，通过拖拽可进行显示排序"
+                      [nzData]="routerFieldsControls"
+                      [nzFrontPagination]="false"
+                      [nzShowPagination]="false"
                     >
-                      <ng-container *ngFor="let x of schemas">
-                        <nz-option [nzLabel]="x.label + ' [ ' + x.key + ' ]'" [nzValue]="x.key"></nz-option>
-                      </ng-container>
-                    </nz-select>
-                    <button nz-button style="width: 10%" type="button" (click)="getSchemas()">
-                      <i nz-icon nzType="sync"></i>
-                    </button>
-                  </nz-input-group>
-                </nz-form-control>
-              </nz-form-item>
-              <nz-form-item>
-                <nz-form-label nzRequired>是否预加载</nz-form-label>
-                <nz-form-control style="width: 420px" nzExtra="需要优先获取数据，例如更新类表单">
-                  <nz-switch formControlName="fetch"></nz-switch>
-                </nz-form-control>
-              </nz-form-item>
-
-              <nz-form-item>
-                <nz-form-label nzRequired>字段设置</nz-form-label>
-                <nz-form-control formArrayName="fields">
-                  <nz-table
-                    #fieldsTable
-                    nzFooter="* 请选择页面需要显示的字段，通过拖拽可进行显示排序"
-                    [nzData]="routerFieldsControls"
-                    [nzFrontPagination]="false"
-                    [nzShowPagination]="false"
-                  >
-                    <thead>
-                      <tr>
-                        <th nzWidth="50px"> </th>
-                        <th nzWidth="200px"><b>字段名称</b></th>
-                        <th nzWidth="200px"><b>显示名称</b></th>
-                        <th><b>是否显示</b></th>
-                      </tr>
-                    </thead>
-                    <tbody cdkDropList (cdkDropListDropped)="sort($event)">
-                      <ng-container *ngFor="let data of fieldsTable.data; index as i">
-                        <tr [formGroupName]="i" cdkDrag>
-                          <td>
-                            <button nz-button nzType="dashed" nzShape="circle" cdkDragHandle>
-                              <i nz-icon nzType="drag"></i>
-                            </button>
-                          </td>
-                          <td>
-                            <input nz-input formControlName="key" readonly />
-                          </td>
-                          <td>
-                            <input nz-input formControlName="label" />
-                          </td>
-                          <td>
-                            <nz-switch formControlName="display"></nz-switch>
-                          </td>
+                      <thead>
+                        <tr>
+                          <th nzWidth="50px"> </th>
+                          <th nzWidth="200px"><b>字段名称</b></th>
+                          <th nzWidth="200px"><b>显示名称</b></th>
+                          <th><b>是否显示</b></th>
                         </tr>
-                      </ng-container>
-                    </tbody>
-                  </nz-table>
-                </nz-form-control>
-              </nz-form-item>
+                      </thead>
+                      <tbody cdkDropList (cdkDropListDropped)="sort($event)">
+                        <ng-container *ngFor="let data of fieldsTable.data; index as i">
+                          <tr [formGroupName]="i" cdkDrag>
+                            <td>
+                              <button nz-button nzType="dashed" nzShape="circle" cdkDragHandle>
+                                <i nz-icon nzType="drag"></i>
+                              </button>
+                            </td>
+                            <td>
+                              <input nz-input formControlName="key" readonly />
+                            </td>
+                            <td>
+                              <input nz-input formControlName="label" />
+                            </td>
+                            <td>
+                              <nz-switch formControlName="display"></nz-switch>
+                            </td>
+                          </tr>
+                        </ng-container>
+                      </tbody>
+                    </nz-table>
+                  </nz-form-control>
+                </nz-form-item>
+              </ng-container>
             </ng-container>
+          </ng-container>
+          <ng-container *ngSwitchCase="2">
+            <nz-form-item>
+              <nz-form-control [nzExtra]="extra">
+                <ng-template #extra>
+                  <p>
+                    请遵循 JSON Schema 规则设置表单验证
+                    <a href="https://json-schema.org/draft/2020-12/json-schema-validation.html" target="_blank">
+                      查看
+                    </a>
+                  </p>
+                </ng-template>
+                <nz-code-editor
+                  style="height: 500px"
+                  formControlName="validation"
+                  [nzEditorOption]="{ language: 'json' }"
+                ></nz-code-editor>
+              </nz-form-control>
+            </nz-form-item>
           </ng-container>
         </ng-container>
 
         <nz-form-item style="padding-top: 1em">
           <nz-form-control>
             <nz-space>
-              <button *nzSpaceItem nz-button nzType="primary">更新</button>
-              <button *nzSpaceItem nz-button nzType="default" type="button">重置</button>
+              <button *nzSpaceItem nz-button nzType="default" type="button">
+                <i nz-icon nzType="close"></i>
+                取消
+              </button>
+              <button *nzSpaceItem nz-button nzType="primary" [disabled]="!form?.valid">
+                <i nz-icon nzType="check"></i>
+                提交
+              </button>
             </nz-space>
           </nz-form-control>
         </nz-form-item>
